--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "amod": "^2.0.0",
+    "clone": "^0.1.18",
     "jdelay": "^9.0.0",
     "jsynth": "^2.2.0",
     "oscillators": "^1.0.0"
