--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parametrical",
   "version": "1.0.0",
   "description": "instant front end for your functions",
-  "main": "index.js",
+  "main": "xindex.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,8 +16,12 @@
   ],
   "author": "Johnny Honestly <mostmodernist@gmail.com> (http://johnnyscript.us/)",
   "license": "MIT",
+  "browserify": {
+    "transform": "brfs"
+  },
   "dependencies": {
-    "brfs": "^1.2.0",
+    "brfs": "^1.3.0",
+    "observable": "^2.1.3",
     "uxer": "^6.2.0"
   },
   "devDependencies": {
