--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "brfs": "^1.3.0",
     "observable": "^2.1.3",
-    "uxer": "^6.2.0"
+    "uxer": ""
   },
   "devDependencies": {
     "amod": "^2.0.0",
