--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "transform": "brfs"
   },
   "dependencies": {
+    "acorn": "^2.7.0",
     "brfs": "^1.3.0",
+    "falafel": "^1.2.0",
     "observable": "^2.1.3",
     "uxer": ""
   },
