--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parametrical",
   "version": "1.2.0",
   "description": "instant front end for your functions",
-  "main": "xindex.js",
+  "main": "yindex.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
     "brfs": "^1.3.0",
     "falafel": "^1.2.0",
     "observable": "^2.1.3",
+    "uuid": "^2.0.1",
     "uxer": ""
   },
   "devDependencies": {
