--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "falafel": "^1.2.0",
     "observable": "^2.1.3",
     "uuid": "^2.0.1",
-    "uxer": ""
+    "uxer": "^4.3.0"
   },
   "devDependencies": {
     "amod": "^2.0.0",
