--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "acorn": "^2.7.0",
     "brfs": "^1.3.0",
     "falafel": "^1.2.0",
+    "insert-css": "^2.0.0",
     "observable": "^2.1.3",
-    "uuid": "^2.0.1",
+    "uuid": "^2.0.3",
     "uxer": "^4.3.0"
   },
   "devDependencies": {
